# AIEffect

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  服务生命周期管理改进方案.md
backend/: PROJECT_STRUCTURE.md  pyproject.toml  requirements.txt
backend/scripts/: seed_logs.py
backend/src/: main.py
backend/src/api/: __init__.py  agents.py  asr.py  characters.py  config.py  files.py  logs.py  memory.py  providers.py  proxy.py  subtitle.py  system.py  tts.py
backend/src/core/: __init__.py  config.py  database.py  logger.py  port_manager.py
backend/src/models/: schemas.py
backend/src/services/: __init__.py  log_service.py  memory_service.py  proxy_service.py  subtitle_service.py  tts_service.py
frontend/: PROJECT_STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/docs/: agents工作室设计.md
frontend/src/: App.tsx  index.css
frontend/src/components/: Select.tsx  Sidebar.tsx  Switch.tsx  index.ts
frontend/src/pages/: AgentsOffice.tsx  AgentsOfficeAdvanced.tsx  AgentsOfficePixi.tsx  AgentsOfficeZones.tsx  CharacterManager.tsx  ControlPanel.tsx  LogsViewer.tsx  MemoryManager.tsx  SubtitleVisual.tsx  VoiceConfig.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
script/: README.md  build.ps1  fix-encoding.ps1  start-dev.ps1  start-dev.py  start-services.ps1  start_services.py  test-service-manager.py
service-manager/: Cargo.toml  MIGRATION.md  README.md
service-manager/src/: lib.rs  main.rs
service-manager/src/service_manager/: dependency.rs  error.rs  health.rs  log_aggregator.rs  mod.rs  shutdown.rs
service-manager/src/service_manager/platform/: mod.rs  unix.rs  windows.rs
service-manager/src/types/: config.rs  status.rs
services/: README.md
services/api_gateway/: Dockerfile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  start.py
services/api_gateway/src/api_gateway/: __init__.py  main.py
services/api_gateway/src/api_gateway/api/: __init__.py  agents.py  ai_assistant.py  asr.py  characters.py  config.py  files.py  logs.py  memory.py  providers.py  proxy.py  subtitle.py  system.py  tts.py
services/api_gateway/src/api_gateway/models/: schemas.py
services/api_gateway/src/api_gateway/services/: log_service.py  memory_service.py  proxy_service.py  subtitle_service.py  tts_service.py
services/log/: Dockerfile  PROJECT_STRUCTURE.md  requirements.txt  start.py
services/log/src/: main.py
services/log/src/api/: __init__.py  alerts.py  health.py  logs.py
services/log/src/core/: database.py
services/log/src/models/: schemas.py
services/log/src/services/: alert_engine.py  log_cache.py  log_streamer.py
services/websocket/: Dockerfile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  start.py
services/websocket/src/websocket_service/: __init__.py  main.py
services/websocket/src/websocket_service/connection/: manager.py
services/websocket/src/websocket_service/handlers/: __init__.py  agent_chat.py  ai_assistant.py  base.py
services/websocket/src/websocket_service/models/: session.py
services/websocket/src/websocket_service/protocol/: constants.py  schemas.py
services/websocket/src/websocket_service/session/: manager.py
shared/python/: README.md  pyproject.toml
shared/python/shared_core/: __init__.py  config.py  curl_parser.py  database.py  logger.py  port_manager.py  remote_log_handler.py  schemas.py
shared/resource/: README.md
开发规范要求/: 01-产品设计文档.md  02-技术架构设计.md  03-UI设计规范.md  04-开发规范.md  05-打包分发规范.md  WebSocket服务设计.md  后端接口约束规范.md  数据库设计.md  日志服务设计.md
