[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aieffect"
version = "0.1.0"
description = "AI Effect - AI Voice Interaction Platform"
authors = ["AIEffect Team"]
readme = "README.md"
packages = [{include = "services"}]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^13.1"

# HTTP Client
httpx = "^0.27.2"
aiohttp = "^3.12.0"

# Data Validation
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"

# Database
aiosqlite = "^0.20.0"

# Utilities
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
pygame = "^2.6.1"

# Shared Package (local)
shared-core = {path = "shared/python", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
start-api = "services.api_gateway.src.main:main"
start-websocket = "services.websocket.src.main:main"
start-log = "services.log.src.main:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
