[tool.poetry]
name = "aieffect-websocket"
version = "1.0.0"
description = "AIEffect WebSocket Service - Real-time AI Conversation"
authors = ["AIEffect Team"]
readme = "README.md"
packages = [{include = "websocket_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
httpx = "^0.25.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# 本地共享包
shared-core = {path = "../../shared/python", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
